[gd_scene load_steps=9 format=3 uid="uid://bssjjygu83iwl"]

[ext_resource type="Script" uid="uid://w5i2p0x14uwd" path="res://Scripts/AudioManager.gd" id="1_hp1cr"]
[ext_resource type="AudioStream" uid="uid://dfpg36gty5ovs" path="res://Assets/Sound/FX/Rain jume.mp3" id="2_5h2c1"]
[ext_resource type="AudioStream" uid="uid://60t6hiksr11q" path="res://Assets/Sound/FX/Spear.mp3" id="2_esrla"]
[ext_resource type="AudioStream" uid="uid://8wcmxty12kw2" path="res://Assets/Sound/FX/Rain coin.mp3" id="3_5h2c1"]
[ext_resource type="AudioStream" uid="uid://niu1of80kgp" path="res://Assets/Sound/FX/Death.mp3" id="4_5h2c1"]
[ext_resource type="AudioStream" uid="uid://jimothegnmt" path="res://Assets/Sound/FX/Hurt.mp3" id="6_5h2c1"]
[ext_resource type="AudioStream" uid="uid://d2wiqo7n15c8d" path="res://Assets/Sound/FX/BGS.mp3" id="7_5h2c1"]
[ext_resource type="AudioStream" uid="uid://dtqbof4bhmbvp" path="res://Assets/Sound/FX/Win.mp3" id="8_5h2c1"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_hp1cr")

[node name="JumpSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_5h2c1")
volume_db = -20.986

[node name="CoinPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5h2c1")

[node name="DeathSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5h2c1")
volume_db = -3.322

[node name="RespawnSfx" type="AudioStreamPlayer" parent="."]

[node name="LevelCompleteSfx" type="AudioStreamPlayer" parent="."]
volume_db = 24.0
pitch_scale = 0.5

[node name="SpearSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_esrla")
volume_db = -25.924

[node name="HurtSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5h2c1")
volume_db = -18.365

[node name="BGSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_5h2c1")
volume_db = -29.26

[node name="WinSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_5h2c1")
volume_db = -32.232
