# This script is an autoload, that can be accessed from any other script!

extends Node

@onready var jump_sfx = $JumpSfx
@onready var coin_pickup_sfx = $CoinPickup
@onready var death_sfx = $DeathSfx
@onready var respawn_sfx = $RespawnSfx
@onready var level_complete_sfx = $LevelCompleteSfx
@onready var spear_sfx = $SpearSfx
@onready var hurt_sfx = $HurtSfx
@onready var bg_sfx = $BGSfx
@onready var win_sfx = $WinSfx
